# speak2reel

./: .env.example  DEPLOYMENT_NOTES.md  LICENSE  README.md  create_sample_images.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  webapp-ci.yml  webapp-ci.yml_NOTES.txt
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/DashboardPage/: DashboardPage.css  DashboardPage.js  DashboardPage.test.js
frontend/src/components/GalleryPage/: GalleryPage.css  GalleryPage.js
frontend/src/components/LandingPage/: LandingPage.css  LandingPage.js  LandingPage.test.js
output/: demo_reel.srt
output/transcripts/: sample_en.json  sample_transcript.json
podcast_to_reels/: downloader.py  image_generator.py  scene_splitter.py  transcriber.py  translator.py  video_composer.py
scripts/: run_pipeline.py
tests/: test_downloader.py  test_image_generator.py  test_scene_splitter.py  test_transcriber.py  test_translator.py  test_video_composer.py
webapp/: CELERY_NOTES.txt  pipeline_format_changes_NOTES.txt  requirements.txt
webapp/api/: apps.py  serializers.py  tasks.py  urls.py  urls.py_NOTES.txt  views.py
webapp/api/tests/: test_views.py
webapp/jobs/: admin.py  apps.py  models.py  models.py_NOTES.txt
webapp/jobs/tests/: test_models.py
webapp/users/: forms.py  views.py
webapp/users/templates/users/: login.html  register.html
webapp/webapp_project/: celery.py  settings.py_NOTES.txt  urls.py
